# PhiMathProject

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  test.py
.github/workflows/: publish-to-testpypi.yml
phimath/: __init__.py
phimath/calculas/: __init__.py  differentiate.py  integrate.py  ode_solvers.py
phimath/control/: __init__.py  numeric.py  symbols.py
phimath/linalg/: __init__.py  matrix.py  solvers.py  vectors.py
phimath/math/: __init__.py  constants.py  exp_log.py  func.py  trigo.py
phimath/physics/: __init__.py  constants.py  mechanics.py  vectorops.py
tests/: test_mechanics.py  test_memory.py  test_performance.py  test_precision.py  test_symbolic.py
